--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -85,8 +85,7 @@ a:hover {
     position: relative;
     height: 100%;
     margin-left: 0;
-/*    margin-top: 80px;
-*/    /*margin-bottom: 60px !important;*/
+    margin-top: 80px; /*margin-bottom: 60px !important;*/
     background-color: #f2f2f2;/*#f5f7fa;*/    
 }
 
