--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -95,7 +95,7 @@ a:hover {
 .content-wrapper{
     width: 100%;
     border-top: 1px solid rgba(0,0,0,.15);
-    padding: 80px 0px 60px 0px;
+    padding-bottom: 60px;
 }
 
 .content-wrapper>h3{
@@ -234,7 +234,12 @@ a:hover {
 
 .review-card-image{
     width:300px;
-    height:230px;
+    height:240px;
+}
+
+.review-card-image>a>img{
+    display: block;
+    margin: 0 auto;
 }
 
 .rv-pd{
