Added end-2-end implementation for sorted reviews. Test cases for review services

--- a/src/main/webapp/css/user-reviews.css
+++ b/src/main/webapp/css/user-reviews.css
@@ -149,6 +149,14 @@ li{
 	line-height: 18px;
 }
 
+.parent .popup {
+    display: none;
+}
+
+.parent:hover .popup {
+    display: block;
+}
+
 
 .feature-review-bars{
 	width: 340px;
