--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -185,7 +185,7 @@ a:hover {
 }
 
 .text-bold{
-    font-weight: 700!important;
+    font-weight: 400!important;
 }
 .m0{
     margin: 0!important;
@@ -284,4 +284,40 @@ hr{
 
 .hot-product-background{
     background: url('../images/hot-product-background.jpg');
+}
+
+.spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px; /* half width of the spinner gif */
+    margin-top: -50px; /* half height of the spinner gif */
+    text-align:center;
+    z-index:1234;
+    overflow: auto;
+    width: 100px; /* width of the spinner gif */
+    height: 102px; /*hight of the spinner gif +2px to fix IE8 issue */
+}
+
+#disablingDiv
+{
+    /* Do not display it on entry */
+    display: none;
+
+    /* Display it on the layer with index 1001.
+       Make sure this is the highest z-index value
+       used by layers on that page */
+    z-index:1001;
+
+    /* make it cover the whole screen */
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+
+    /* make it white but fully transparent */
+    background-color: white;
+    opacity:.00;
+    filter: alpha(opacity=00);
 }
