Update game service

--- a/src/main/webapp/css/start.css
+++ b/src/main/webapp/css/start.css
@@ -76,7 +76,7 @@ body{
     height: 180px;
     margin: 10px auto;
     border-radius: 90px;
-    background-color: lightgoldenrodyellow;
+    background-color: #fff;
     text-align: center;
 }
 
