--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -182,6 +182,9 @@ a:hover {
     font-size: 22px!important;
 }
 
+.fs-8{
+    font-size: 12px!important;
+}
 .text-bold{
     font-weight: 400!important;
 }
@@ -245,7 +248,7 @@ a:hover {
 }
 
 .reviewer{
-    color: blue;
+    color: #3333FF;
 }
 
 
@@ -264,9 +267,8 @@ p{
     height: 60px;
     border-top: 1px solid #e4eaec;
     padding: 20px;
-    z-index: 109;
     background-color: #f5f7fa;
-    /*margin-left: 220px;*/
+    text-align: center;
 }
 
 /*@media only screen and (min-width: 768px)
@@ -296,7 +298,7 @@ hr{
 
 .disablingDiv
 {
-    background-color: rgba(250, 250, 250, 0.8);
+    background-color: rgba(205, 205, 205, 0.80);
     z-index: 999;
     position: absolute;
     left: 0;
@@ -304,4 +306,38 @@ hr{
     width: 100%;
     height: 100%;
     display: none;
+}
+
+.fill{
+    float: left;
+    height: 8px;
+}
+
+.fill-green{
+    background: #390;
+}
+
+.fill-yellow{
+    background: #ffac00;
+}
+
+
+.fill-light-green{
+    background: #9c0;
+}
+
+.fill-light-red{
+    background: #FF3300;
+}
+
+.fill-red{
+    background: #c00;
+}
+
+.product-review-bar{
+    width: 55px;
+    height: 8px;
+    float: right;
+    /*margin: 5px 0 10px;*/
+    background: #cbcbcb;
 }
