--- a/src/main/webapp/css/menu.css
+++ b/src/main/webapp/css/menu.css
@@ -1,6 +1,6 @@
 .dl-menuwrapper {
     width: 100%;
-    max-width: 200px;
+    max-width: 300px;
     float: left;
     position: relative;
     -webkit-perspective: 1000px;
@@ -33,6 +33,7 @@
 
 .dl-menuwrapper ul {
     background:  #fff; /*#79a002;*/
+    border: 1px solid #e7e7e7;
 }
 
 .dl-menuwrapper button:after {
@@ -87,7 +88,7 @@
     font-size: 16px;
     line-height: 20px;
     font-weight: 400;
-    color: #3a3f51;
+    color: #000000;
     outline: none;
     vertical-align: middle;   
 }
