--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -60,12 +60,13 @@ ul{
     color: #fff;
     float: right;
     margin-top: 10px;
+    margin-left: 10px;
     font-weight: bold;
 }
 
 .login>img{
     float: right;
-    margin-top: 5px; 
+    margin-top: 5px;
 }
 
 a:hover {
