--- a/src/main/webapp/css/user-reviews.css
+++ b/src/main/webapp/css/user-reviews.css
@@ -51,11 +51,11 @@ ul{
 }
 
 .login>a{
-
     font-size: 16px;
     color: #fff;
     float: right;
     margin-top: 10px;
+    margin-left: 10px;
     font-weight: bold;
 }
 
